# beagle

./: .editorconfig  .gitignore  .gitmodules  .swiftlint  :  BeagleUI.podspec  CODEOWNERS  DockerfileBuilder  Jenkinsfile  Makefile  README.md  bitrise.yml  build.gradle  codecov.yml  detekt.gradle  docker-compose-ci.yml  gradle.properties  jacoco.gradle  maven-publish.gradle  pom.xml  publish.sh  publishLocal.sh  publishRemote.sh  run-ci.sh  settings.gradle  sonar-project.properties
BeagleDev.xcworkspace/: contents.xcworkspacedata
Darwin-BeagleUI.xcworkspace/: contents.xcworkspacedata
Decodable.playground/: Contents.swift  timeline.xctimeline
Framework/: .swiftformat
YogaKit.playground/: Contents.swift
android/: README.md  build.gradle  detekt.gradle  screenshots.gradle  settings.gradle
android-annotation/: build.gradle
android-core/: pom.xml
app/: build.gradle
beagle/: build.gradle
beagle-android/: CODEOWNERS  build.gradle  gradle.properties  maven-publish.gradle
beagle-android-declarative/: pom.xml
beagle-android/libs/yoga/: CMakeLists.txt  build.gradle  gradle.properties
beagle-android/libs/yoga/src/main/java/com/facebook/yogalayout/: YogaLayout.java
beagle-annotation/: pom.xml
beagle-backend-declarative/: pom.xml
beagle-core/: pom.xml
beagle-declarative/: pom.xml
beagle-framework/: pom.xml
beagle-sample/: pom.xml
beagle-ui/: build.gradle
buildSrc/: build.gradle.kts
config/: .codecov.yml  codecov.yml  detekt-default-config.yml
fastlane/: Fastfile  Pluginfile  README.md  delete_release.sh
framework/: .gitignore  CODEOWNERS  (+5 more)
(+2756 files in other folders)
